tests/baselines/reference/genericArrayMethods1.errors.txt
tests/cases/compiler/genericArrayMethods1.ts(1,5): error TS2322: Type '数字[]' is not assignable to type '文字[]'.
  Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/genericArrayMethods1.ts (1 errors) ====
    var x:string[] =  [0,1].slice(0); // this should be an error
        ~
!!! error TS2322: Type '数字[]' is not assignable to type '文字[]'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
    